--- a/sample/n.html
+++ b/sample/n.html
@@ -50,7 +50,7 @@ var a = [
 
 
 	document.getElementById('save').onclick = function(){
-		var t1 = GateData(a);
+		var t1 = DataGate(a);
 			//t1.regexp('xx',/^[0-9]*$/)
 			t1.check();
 			var err;
